--- a/app/src/main/res/layout/fragment_confirm_paid.xml
+++ b/app/src/main/res/layout/fragment_confirm_paid.xml
@@ -132,7 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:backgroundTint="@color/teal_200"
+            android:backgroundTint="@color/primary"
             android:text="Xác nhận đã chuyển khoản"
             android:textAllCaps="false"
             android:textColor="@color/black"
