--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -122,7 +122,7 @@
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:text="Cập nhật"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/primary"
         android:textColor="@color/black"
         android:textAllCaps="false"
         android:layout_marginBottom="60dp"
