--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,26 +10,18 @@
         android:layout_height="match_parent"
         android:padding="10dp">
 
-        <TextView
-            android:id="@+id/homeTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cart"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
         <EditText
             android:id="@+id/searchEdt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            android:hint="Tìm kiếm sản phẩm"
+            android:hint="Search product"
+            android:background="@drawable/bg_edittext"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp"
             app:layout_constraintEnd_toStartOf="@id/searchBtn"
-            app:layout_constraintStart_toEndOf="@id/homeTxt"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -43,8 +36,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cartRcv"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_marginTop="30dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/searchEdt" />
 
@@ -58,53 +51,38 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cartRcv" />
 
-        <TextView
-            android:id="@+id/sumTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Tổng: "
-            android:textColor="@color/red"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lineImg" />
 
         <TextView
             android:id="@+id/totalPriceTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="100.000"
-            android:textColor="@color/green"
+            android:text="$100"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             android:textSize="25dp"
-            android:textStyle="italic"
-            app:layout_constraintStart_toEndOf="@id/sumTxt"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lineImg" />
 
         <TextView
-            android:id="@+id/vndTxt"
+            android:id="@+id/tvTotalItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:text="vnd"
-            android:textColor="@color/yellow"
-            android:textSize="25dp"
-            android:textStyle="italic"
-            app:layout_constraintStart_toEndOf="@id/totalPriceTxt"
-            app:layout_constraintTop_toBottomOf="@id/lineImg" />
-
-        <androidx.appcompat.widget.AppCompatButton
+            android:text = "Total: 2 items"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@id/totalPriceTxt"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <Button
             android:id="@+id/orderBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="Đặt hàng"
+            android:padding="16dp"
+            android:layout_marginHorizontal="24dp"
+            app:layout_constraintBottom_toBottomOf="@id/tvTotalItem"
+            android:text="Order"
+            app:layout_constraintStart_toEndOf="@id/tvTotalItem"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/totalPriceTxt" />
+            app:layout_constraintTop_toTopOf="@id/totalPriceTxt" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
