--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,26 +11,20 @@
         android:padding="10dp"
         tools:context=".screens.home.HomeFragment">
 
-        <TextView
-            android:id="@+id/homeTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Home"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
 
         <EditText
             android:id="@+id/searchEdt"
             android:layout_width="0dp"
+            android:background="@drawable/bg_edittext"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            android:hint="Tìm kiếm sản phẩm"
+            android:hint="Search product"
             app:layout_constraintEnd_toStartOf="@id/searchBtn"
-            app:layout_constraintStart_toEndOf="@id/homeTxt"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -46,12 +40,12 @@
             android:id="@+id/newProductTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="8dp"
             android:text="Sản phẩm mới"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/homeTxt" />
+            app:layout_constraintTop_toBottomOf="@id/searchEdt" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/newProductRcv"
