--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,62 +22,58 @@
             android:scaleType="fitXY"
             android:src="@drawable/ic_profile"
             android:cropToPadding="true"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="25dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/edit_user_info" />
 
         <!--Profile features-->
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="30dp"
-            android:text="Họ và tên"
-            android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
         <TextView
             android:id="@+id/name_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
-            android:layout_marginTop="30dp"
             android:text="@string/fullname"
             android:maxLines="1"
-            android:textSize="15sp"
+            android:textSize="26sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@id/imageView"
+            app:layout_constraintHorizontal_bias="0"
+            android:layout_marginStart="32dp"
+            app:layout_constraintBottom_toBottomOf="@id/imageView"/>
 
-        <TextView
+        <ImageView
             android:id="@+id/email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginStart="25dp"
             android:layout_marginTop="20dp"
-            android:text="Gmail"
+            android:src="@drawable/ic_email"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/email_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
-            android:layout_marginTop="20dp"
             android:text="@string/email"
             android:maxLines="1"
             android:textSize="15sp"
+            android:layout_marginStart="50dp"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toEndOf="@id/email"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name_info" />
+            app:layout_constraintTop_toTopOf="@id/email"
+            app:layout_constraintBottom_toBottomOf="@id/email"/>
 
-        <TextView
+        <ImageView
             android:id="@+id/phone_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SĐT"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_phone"
             android:textSize="15sp"
             android:layout_marginStart="25dp"
             android:layout_marginTop="20dp"
@@ -89,18 +85,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
-            android:layout_marginTop="20dp"
             android:text="@string/phonenum"
             android:maxLines="1"
+            android:layout_marginStart="50dp"
             android:textSize="15sp"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toEndOf="@id/email"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_info" />
+            app:layout_constraintTop_toTopOf="@id/phone_number"
+            app:layout_constraintBottom_toBottomOf="@id/phone_number"/>
 
-        <TextView
+        <ImageView
             android:id="@+id/address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Địa chỉ"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_address"
             android:textSize="15sp"
             android:layout_marginStart="25dp"
             android:layout_marginTop="20dp"
@@ -112,36 +111,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
-            android:layout_marginTop="20dp"
             android:text="@string/address"
             android:maxLines="2"
             android:textSize="15sp"
+            app:layout_constraintHorizontal_bias="0"
+            android:layout_marginStart="50dp"
+            app:layout_constraintStart_toEndOf="@id/address"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phone_number_info" />
+            app:layout_constraintTop_toTopOf="@id/address"
+            app:layout_constraintBottom_toBottomOf="@id/address"/>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/edit_user_info"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:text="Chỉnh sửa"
-            android:backgroundTint="@color/primary"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:layout_marginTop="30dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/address"/>
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_edit"
+           android:layout_margin="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/order_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tình trạng đơn hàng"
+            android:text="Order status"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/edit_user_info"/>
+            app:layout_constraintTop_toBottomOf="@+id/address"/>
 
         <!--Placeholder for Order Status-->
         <androidx.recyclerview.widget.RecyclerView
