--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -16,64 +16,62 @@
         android:scaleType="fitXY"
         android:src="@drawable/ic_profile"
         android:cropToPadding="true"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--Profile features-->
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="100dp"
-        android:text="Họ và tên"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
     <EditText
         android:id="@+id/edit_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/bg_edittext"
         android:text="@string/fullname"
+        android:padding="8dp"
         android:inputType="text"
         android:maxLines="1"
-        android:textSize="15sp"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView" />
+        app:layout_constraintTop_toTopOf="@id/imageView"
+        app:layout_constraintStart_toEndOf="@id/imageView"
+        app:layout_constraintBottom_toBottomOf="@id/imageView"/>
 
-    <TextView
+    <ImageView
         android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="40dp"
-        android:text="Gmail"
+        android:src="@drawable/ic_email"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <EditText
         android:id="@+id/edit_email"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/bg_edittext"
         android:text="@string/email"
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:textSize="15sp"
+        android:layout_marginStart="32dp"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_name" />
+        app:layout_constraintTop_toTopOf="@id/email"
+        app:layout_constraintStart_toEndOf="@id/email"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintBottom_toBottomOf="@id/email"/>
 
-    <TextView
+    <ImageView
         android:id="@+id/phone_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SĐT"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_phone"
         android:textSize="15sp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="40dp"
@@ -82,22 +80,26 @@
 
     <EditText
         android:id="@+id/edit_phone"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/bg_edittext"
+        android:padding="8dp"
         android:text="@string/phonenum"
         android:inputType="phone"
         android:maxLines="1"
         android:textSize="15sp"
+        android:layout_marginStart="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_email" />
+        app:layout_constraintTop_toTopOf="@id/phone_number"
+        app:layout_constraintStart_toEndOf="@id/phone_number"
+        app:layout_constraintBottom_toBottomOf="@id/phone_number"/>
 
-    <TextView
+    <ImageView
         android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Địa chỉ"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_address"
         android:textSize="15sp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="40dp"
@@ -106,26 +108,31 @@
 
     <EditText
         android:id="@+id/edit_address"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
         android:text="@string/address"
         android:inputType="text"
         android:maxLines="2"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/bg_edittext"
+        android:padding="8dp"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_phone" />
+        app:layout_constraintTop_toTopOf="@id/address"
+        app:layout_constraintBottom_toBottomOf="@id/address"
+        app:layout_constraintStart_toEndOf="@id/address"/>
 
     <Button
         android:id="@+id/update_user_info"
-        android:layout_width="130dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cập nhật"
+        android:text="Update"
         android:backgroundTint="@color/primary"
-        android:textColor="@color/black"
-        android:textAllCaps="false"
-        android:layout_marginBottom="60dp"
+        android:textColor="@color/white"
+        app:layout_constraintVertical_bias="0"
+        android:layout_marginTop="32dp"
+        android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -135,14 +142,12 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chọn ảnh"
-        android:backgroundTint="@color/gray"
-        android:textColor="@color/black"
+        android:text="Select image"
+        android:textColor="@color/white"
         android:textSize="12sp"
-        android:textAllCaps="false"
         android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintStart_toStartOf="@id/imageView"
+        app:layout_constraintEnd_toEndOf="@id/imageView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
