--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,28 +1,23 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/homeFragment"
-        android:title="home"
-        android:icon="@drawable/ic_home"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/searchFragment"
-        android:title="search"
-        android:icon="@drawable/ic_search"
-        app:showAsAction="ifRoom" />
+        android:title="Home"
+        android:icon="@drawable/ic_home" />
 
     <item
         android:id="@+id/cartFragment"
-        android:title="cart"
-        android:icon="@drawable/ic_cart"
-        app:showAsAction="ifRoom" />
+        android:title="Cart"
+        android:icon="@drawable/ic_cart" />
+
+<!--    <item-->
+<!--        android:id="@+id/searchFragment"-->
+<!--        android:title="Search"-->
+<!--        android:icon="@drawable/ic_search" />-->
 
     <item
         android:id="@+id/profileFragment"
-        android:title="profile"
-        android:icon="@drawable/ic_profile"
-        app:showAsAction="ifRoom" />
+        android:title="Profile"
+        android:icon="@drawable/ic_profile"/>
 
 </menu>
