--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,36 +9,13 @@
         android:layout_height="match_parent"
         android:padding="10dp">
 
-        <EditText
-            android:id="@+id/searchEdt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
-            android:hint="Search product"
-            android:background="@drawable/bg_edittext"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp"
-            app:layout_constraintEnd_toStartOf="@id/searchBtn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/searchBtn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_search"
-            app:layout_constraintBottom_toBottomOf="@id/searchEdt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cartRcv"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="400dp"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/searchEdt" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/lineImg"
@@ -57,10 +33,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="$100"
-            android:textStyle="bold"
+            android:text="0.0"
             android:textColor="@color/black"
             android:textSize="25dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lineImg" />
 
@@ -68,20 +44,21 @@
             android:id="@+id/tvTotalItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text = "Total: 2 items"
             android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/totalPriceTxt"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:text="Total: 0 item" />
+
         <Button
             android:id="@+id/orderBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:layout_marginHorizontal="24dp"
-            app:layout_constraintBottom_toBottomOf="@id/tvTotalItem"
+            android:padding="16dp"
             android:text="Order"
-            app:layout_constraintStart_toEndOf="@id/tvTotalItem"
+            app:layout_constraintBottom_toBottomOf="@id/tvTotalItem"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tvTotalItem"
             app:layout_constraintTop_toTopOf="@id/totalPriceTxt" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
