--- a/app/src/main/res/layout/order_status.xml
+++ b/app/src/main/res/layout/order_status.xml
@@ -32,6 +32,12 @@
                 android:layout_height="wrap_content"
                 android:text="Mã: 001"
                 android:textSize="15sp"/>
+            <TextView
+                android:id="@+id/orderDateTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10-10-2023"
+                />
 
             <TextView
                 android:id="@id/order_status"
