--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -23,7 +23,7 @@
             android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:scaleType="fitXY"
+            android:scaleType = "centerCrop"
             android:src="@drawable/ic_launcher_background" />
 
         <LinearLayout
